For the latest news, visit the Linux Cafe at the PegaSoft web site. 

SparForte 2.0's focus was on symbol table changes to support packages, and extending the maximum number of reserved words so more keywords can be defined.

CHANGES SINCE 2.0

1. New: in --test phase mode, variables that are not written to (that is, assigned to or are in out / out parameters) are an error: they should be constants.  If a record field is written to, the whole record is treated as written to.

2. Change: Release tests now test example programs with --test phase mode (instead of the default development phase mode) to ensure the most error checking is applied.  (Also, they really are being tested for a release so --test is the correct flag.)

3. Change: Additional debugging options on GCC C compiles.

4. Fix: for GNU readline prompt, added a newline so "return" displays properly on control-d exit.

5. Change: New, more meaningful message when a -- or comment hides last semi-colon at a command prompt.

6. New: pragma annotate( category ... ) to designate a group of scripts.
