@@ -55,6 +55,9 @@ maintenance phase mode
 \fB\-p\fR, \fB\-\-perf\fR
 show performance stats
 .TP
+\fB\-P\fR, \fB\-\-profile\fR
+run the profile script when not logging in
+.TP
 \fB\-r\fR, \fB\-\-restricted\fR
 restricted shell mode
 .TP
